overflow fix

--- a/gameStyles.css
+++ b/gameStyles.css
@@ -2,7 +2,7 @@
 body {
   background-color: #F0EAE3!important;
   font-family: 'DM Sans', sans-serif!important;
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+  overflow-y: scroll;
 
 }
 /* For mobile phones: */
